Fixed alignment in team section 2

--- a/src/styles.css
+++ b/src/styles.css
@@ -1014,8 +1014,8 @@ img {
     justify-content: flex-start;
   }
 
-  .sm\:justify-evenly {
-    justify-content: space-evenly;
+  .sm\:justify-center {
+    justify-content: center;
   }
 
   .sm\:h-32 {
@@ -1153,10 +1153,6 @@ img {
 
   .md\:justify-start {
     justify-content: flex-start;
-  }
-
-  .md\:justify-center {
-    justify-content: center;
   }
 
   .md\:h-20 {
